# TestGame

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/test/testgame/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/test/testgame/: MainActivity.kt
app/src/test/java/com/test/testgame/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
